[package]
name = "fawkes"
version = "0.1.0"
edition = "2021"

[features]
default = []
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
futures = { version = "0.3", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "1", default-features = false }
tokio-tungstenite = { version =  "0.17", default-features = false, features = ["connect"] }
tokio = { version = "1", default-features = false, features = ["sync", "net"] }
url = { version = "2", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "basics"
required-features = ["rustls-tls-native-roots"]
